# net-pulse

./: .gitignore  README.md  benchmark_tests.py  net-pulse-technical-design-plan.md  net-pulse-ui-design-spec.md  project-plan.md  project-progress.md  pyproject.toml  pytest.ini  run_fast_tests.py  setup_test_env.sh  technical-design.md  ui-impl-plan.md  ui-spec.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/routes/: +page.svelte
frontend/src/routes/settings/: +page.svelte
src/: __init__.py
src/netpulse/: __init__.py  autodetect.py  collector.py  database.py  main.py  network.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_autodetect.py  test_collector.py  test_database.py  test_init.py  test_integration.py  test_main.py  test_network.py  test_test_utils.py  test_utils.py
